hardcode default path

--- a/conf/vsftpd.conf
+++ b/conf/vsftpd.conf
@@ -1,3 +1,5 @@
+listen_port=2121
+
 # Example config file /etc/vsftpd.conf
 #
 # The default compiled in settings are fairly paranoid. This sample file
