--- a/me.conf
+++ b/me.conf
@@ -1,5 +1,5 @@
 userlist_enable=YES
-listen_port=2121
+listen_port=3000
 run_as_launching_user=YES
 # Example config file /etc/vsftpd.conf
 #
@@ -12,11 +12,11 @@ run_as_launching_user=YES
 # capabilities.
 #
 # Allow anonymous FTP? (Beware - allowed by default if you comment this out).
-anonymous_enable=NO
+anonymous_enable=YES
 #
 # Uncomment this to allow local users to log in.
 local_enable=YES
-pam_service_name=/home/forest/code/vsftpd/vsftpd
+#pam_service_name=/home/forest/code/vsftpd/vsftpd
 #
 # Uncomment this to enable any form of FTP write command.
 write_enable=YES
@@ -28,12 +28,12 @@ local_umask=022
 # Uncomment this to allow the anonymous FTP user to upload files. This only
 # has an effect if the above global write enable is activated. Also, you will
 # obviously need to create a directory writable by the FTP user.
-#anon_upload_enable=YES
+anon_upload_enable=YES
 #
 # Uncomment this if you want the anonymous FTP user to be able to create
 # new directories.
-#anon_mkdir_write_enable=YES
-#anon_other_write_enable=YES
+anon_mkdir_write_enable=YES
+anon_other_write_enable=YES
 #
 # Activate directory messages - messages given to remote users when they
 # go into a certain directory.
